@@ -706,10 +706,23 @@ sub _can_write {
 # load a module and return the version it reports
 sub _load {
     my $mod  = pop;    # class/instance doesn't matter
+    my $file = $mod;
+
+    $file =~ s|::|/|g;
+    $file .= '.pm';
+
+    local $@;
+    return eval { require $file; $mod->VERSION } || ( $@ ? undef: 0 );
+}
+
+# report version without loading a module
+sub _version_of {
+    my $mod  = pop;    # class/instance doesn't matter
     require Module::Metadata;
     my $meta = Module::Metadata->new_from_module($mod);
     return $meta ? $meta->version($mod) : undef;
 }
+
 
 # Load CPAN.pm and it's configuration
 sub _load_cpan {
